--- a/project.html
+++ b/project.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive E-commerce website</title>
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
 </head>
 
 <body>
     <!-- navbar-->
     <header>
-        <a href="0" class="logo"><i class="bx bxs-t- shint"></i>Addidas</a>
+        <a href="#" class="logo"><i class="bx bxs-t- shirt"></i>Addidas</a>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#new">New Arrival</a></li>
@@ -19,15 +21,9 @@
             <li><a href="#reviews">Reviews</a></li>
         </ul>
 
-
         <!--search box-->
         <div class="searchbox">
             <input types="search" name="" id="name" placeholder="search here">
-            <div class="header-icons">
-                <img src="./images/search bar.jpg" alt="">
-                <img src="./images/baseket.jpg" alt="">
-                <img src="./images/profile2.jpg" alt="">
-            </div>
         </div>
         
      </header>
@@ -172,7 +168,7 @@
         </div>
         <div class="product-contanier">
             <div class="box">
-                <img src="" alt="">
+                <img src="images/shirt4.jpg" alt="">
                 <div class="content">
                     <h2>T-Shirt 14A</h2>
     </section>
@@ -224,19 +220,19 @@
         </div>
         <div class="footer-box">
             <h3>Surpport</h3>
-            <li><a href="">Product</a></li>
+            <li>Product</li>
         </div>
         <div class="footer-box">
-            <li><a href="">Help&Support</a></li>
+            <li>Help&Support</li>
         </div>
         <div class="footer-box">
-            <li><a href="">Return policy</a></li>
+            <li>Return policy</li>
         </div>
         <div class="footer-box">
-            <li><a href="">Terms of use</a></li>
+            <li>Terms of use</li>
         </div>
         <div class="footer-box">
-            <li><a href="">FAQ</a></li>
+            <li>FAQ</li>
         </div>
         <div class="footer-box">
             <h3>Our Branches</h3>
