--- a/project.html
+++ b/project.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive E-commerce website</title>
+    <title>Cloth Store</title>
     <link rel="stylesheet" href="project.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 </head>
 
 <body>
     <!-- navbar-->
     <header>
-        <a href="#" class="logo"><i class="bx bxs-t- shirt"></i>Addidas</a>
+</html>
+<h1 class="logo">ADDIDAS</h1>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#new">New Arrival</a></li>
