--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive E-commerce website</title>
+    <title>Cloth Store</title>
     <link rel="stylesheet" href="project.css">
+</head>
 </head>
 
 <body>
     <!-- navbar-->
     <header>
-        <a href="0" class="logo"><i class="bx bxs-t- shint"></i>Addidas</a>
+</html>
+<h1 class="logo">ADDIDAS</h1>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#new">New Arrival</a></li>
@@ -19,15 +20,9 @@
             <li><a href="#reviews">Reviews</a></li>
         </ul>
 
-
         <!--search box-->
         <div class="searchbox">
             <input types="search" name="" id="name" placeholder="search here">
-            <div class="header-icons">
-                <img src="./images/search bar.jpg" alt="">
-                <img src="./images/baseket.jpg" alt="">
-                <img src="./images/profile2.jpg" alt="">
-            </div>
         </div>
         
      </header>
@@ -57,14 +52,14 @@
                     </div>
                 </div>
                 <div class="swiper-slide box">
-                    <img src="./images/images (4).jpeg" alt="">
+                    <img src="./images/roundneckmega.jpg" alt="">
                     <div class="content">
                         <div class="price">$60</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
-                    <img src="./images/images (5).jpeg" alt="">
+                    <img src="./images/roundneck2.jpg" alt="">
                     <div class="content">
                         <div class="price">30.7</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
@@ -172,7 +167,7 @@
         </div>
         <div class="product-contanier">
             <div class="box">
-                <img src="" alt="">
+                <img src="images/shirt4.jpg" alt="">
                 <div class="content">
                     <h2>T-Shirt 14A</h2>
     </section>
@@ -224,19 +219,19 @@
         </div>
         <div class="footer-box">
             <h3>Surpport</h3>
-            <li><a href="">Product</a></li>
+            <li>Product</li>
         </div>
         <div class="footer-box">
-            <li><a href="">Help&Support</a></li>
+            <li>Help&Support</li>
         </div>
         <div class="footer-box">
-            <li><a href="">Return policy</a></li>
+            <li>Return policy</li>
         </div>
         <div class="footer-box">
-            <li><a href="">Terms of use</a></li>
+            <li>Terms of use</li>
         </div>
         <div class="footer-box">
-            <li><a href="">FAQ</a></li>
+            <li>FAQ</li>
         </div>
         <div class="footer-box">
             <h3>Our Branches</h3>
