--- a/project.html
+++ b/project.html
@@ -47,112 +47,112 @@
                 <div class="swiper-slide">
                     <img src="./images/colarpolo1.jpg" alt="">
                     <div class="content">
-                        <div class="price">$30</div>
+                        <div class="price">N15,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/roundneckmega.jpg" alt="">
                     <div class="content">
-                        <div class="price">$60</div>
+                        <div class="price">N14,500</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/roundneck2.jpg" alt="">
                     <div class="content">
-                        <div class="price">30.7</div>
+                        <div class="price">N9,700</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/polo1.jpg" alt="">
                     <div class="content">
-                        <div class="price">50.9</div>
+                        <div class="price">N9,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/polo2.jpg" alt="">
                     <div class="content">
-                        <div class="price">$66.9</div>
+                        <div class="price">N12,300</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/polotwo.jpg" alt="">
                     <div class="content">
-                        <div class="price">$77</div>
+                        <div class="price">N8,900</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/zara.jpg" alt="">
                     <div class="content">
-                        <div class="price">$90</div>
+                        <div class="price">N35,0000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/round1.jpg" alt="">
                     <div class="content">
-                        <div class="price">$30.2</div>
+                        <div class="price">N7,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/roundgroup.jpg" alt="">
                     <div class="content">
-                        <div class="price">$56</div>
+                        <div class="price">N6,500</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/roundmega3.jpg" alt="">
                     <div class="content">
-                        <div class="price">$87</div>
+                        <div class="price">N8,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/roundneck1.jpg" alt="">
                     <div class="content">
-                        <div class="price">$77.7</div>
+                        <div class="price">N20,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/roundneck2.jpg" alt="">
                     <div class="content">
-                        <div class="price">$60.7</div>
+                        <div class="price">N23,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/shirt1.jpg" alt="">
                     <div class="content">
-                        <div class="price">$20</div>
+                        <div class="price">N33,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/shirt2.jpg" alt="">
                     <div class="content">
-                        <div class="price">$15</div>
+                        <div class="price">N27,000</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/shirt3.jpg" alt="">
                     <div class="content">
-                        <div class="price">$10.7</div>
+                        <div class="price">N26,500</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
                 <div class="swiper-slide box">
                     <img src="./images/shirt4.jpg" alt="">
                     <div class="content">
-                        <div class="price">$77</div>
+                        <div class="price">N38,400</div>
                         <a href="#new arrival" class="btn">Buy Now</a>
                     </div>
                 </div>
@@ -247,16 +247,6 @@
         </div>
         </div>
     </section>
-    <div class="user">
-        <h2>login now</h2>
-        <input type="email" placeholder="youremail...">
-        <input type="password" name="" id="" placeholder="password">
-        <input type="submit" value="login" class="login">
-        <input type="submit" value="logout" class="logout">
-
-        <p>forget password<a href="#password">Reset Now</a></p>
-        <p>Don't have account<a href="#create one">Create one</a></p>
-    </div>
     <!--copyright-->
     <div class="copyright">
         <p>&#169; carpool venom All right Reserved</p>
