--- a/project.html
+++ b/project.html
@@ -1,256 +1,383 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloth Store</title>
-    <link rel="stylesheet" href="project.css">
-</head>
-</head>
+.google{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    scroll-behavior: smooth;
+    scroll-padding-top: 2rem;
+}
+body{
+    background-color:lavender;
+    scroll-behavior: smooth;
+}
+/*some variables*/
+:root{
+    --main-color:#ebad03;
+    --second-color:#31fdfd;
+    --text-color:#070707;
+}
+/*custom scroll bar*/
+html::-webkit-scrollbar{
+    width:0.5rem;
+}
+html::-webkit-scrollbar-thumb{
+    background:#d11313;
+}
+html::-webkit-srcoll-track{
+    background: var(--text-color);
+    border-radius: 5rem;
+}
+.btn{
+    padding: 0.7rem 1.2rem;
+    background:var(--main-color);
+    color:var(--bg-color);
+    font-weight: 500;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    clip-path:polygon(100% 0, 93% 50%, 86% 99%, 0% 100%, 7% 47%, 13% 0%,);
+}
+.btn:hover{
+    background:var(--text-color);
+    letter-spacing: 2px;
+    transition: 0.25;
+}
+header::shadow{
+    background:var(--bg-color);
+    box-shadow: 004px rgb(14 55 54 /15%);
+}
+img{
+    width:60%;
+}
+section{
+    padding:50px 100px;
+}
+header{
+    position:fixed;
+    width:100%;
+    top:0;
+    right:0;
+    z-index: 1000;
+    display: flex;
+    align-items:center;
+    text-decoration: none;
+    background-color: lightseagreen;
+    backdrop-filter: blur(8px);
+    justify-content: space-between;
+    padding: 20px, 100px;
+    transition: 0.5s linear;
+}
+.logo{
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 600;
+    column-gap: 0.2rem;
+    color:var(--text-color);
+}
+.logo .bx{
+    font-size: 24px;
+    color:var(--main-color);
+}
+.navbar{
+    display: flex;
+    column-gap: 2.4rem;  
+    list-style: none;
+}
+.navbar a{
+    font-size: 1rem;
+    font-weight: 500;
+    text-decoration: none;
+    color:var(--text-color);
+}
+.navbar a:hover{
+    color:var(--main-color);
+}
+.header-icons{
+    font-size: 22px;
+    cursor: pointer;
+    z-index: 100000;
+}
+#main-icons{
+    display: none;
+}
+.search.box{
+    position: absolute;
+    top:110%;
+    right:-100%;
+}
+.search.box input{
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-radius: 0.5rem;
+    width:280px;
+    box-shadow: var(--box-shadow);
+}
+.search-box.active{
+    right: 1rem;
+    transition: 0.2s;
+}
 
-<body>
-    <!-- navbar-->
-    <header>
-</html>
-<h1 class="logo">ADDIDAS</h1>
-        <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#new">New Arrival</a></li>
-            <li><a href="#product">products</a></li>
-            <li><a href="#reviews">Reviews</a></li>
-        </ul>
 
-        <!--search box-->
-        <div class="searchbox">
-            <input types="search" name="" id="name" placeholder="search here">
-        </div>
-        
-     </header>
-    <!--Home-->
-    <secton class="home" id="home">
-        <div class="home-text">
-            <h1>New Arrival of <br> fresh products</h1>
-            <a href="#" class="btn">shop now</a>
-        </div>
-        <div class="home-img">
-            <img src="./images/cheerful-girl-stylish-pants-posing-with-trolley-after-shopping-woman-fashionable-bright-clothes-beret-with-handbag-smiles-camera.jpg"
-                alt="">
-        </div>
-    </secton>
-    <!--NewArrival-->
-    <section class="new" id="new">
-        <div class="heading">
-            <h1>New<span>Arrival</span></h1>
-        </div>
-        <div class="swipernew-Arrival">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img src="./images/colarpolo1.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N15,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/roundneckmega.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N14,500</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/roundneck2.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N9,700</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/polo1.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N9,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/polo2.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N12,300</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/polotwo.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N8,900</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/zara.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N35,0000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/round1.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N7,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/roundgroup.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N6,500</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/roundmega3.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N8,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/roundneck1.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N20,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/roundneck2.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N23,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/shirt1.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N33,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/shirt2.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N27,000</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/shirt3.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N26,500</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-                <div class="swiper-slide box">
-                    <img src="./images/shirt4.jpg" alt="">
-                    <div class="content">
-                        <div class="price">N38,400</div>
-                        <a href="#new arrival" class="btn">Buy Now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+.home{
+    /* width: 100%; */
+    /* min-height: 100vh; */
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    /* background:var(--second-color) */
+}
+.home-textspan{
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.home-text h1{
+    font-size: 3.4rem;
+    font-weight:600;
+    text-transform: capitalize;
+    color:var(--text-color);
+}
+.heading span{
+    padding: 0.2rem 1.2rem;
+    background:var(--main-color);
+    color:var(--bg-color);
+    font-weight: 500;
+    display: inline-block;
+    text-transform: uppercase;
+    clip-path:polygon(100% 0, 93% 50%, 86% 99%, 0% 100%, 7% 47%, 13% 0%,);
+}
+.new-arrival{
+    margin-top: 2rem;
+}
+.new-arrivalbox{
+    position:relative;
+    overflow: hidden;
+}
+.new-arrival .box img{
+    background: var(--second-color);
+    width: 100%;
+    height:100%;
+    object-fit:contain;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+.new-arrival.box.content{
+    position:absolute;
+    top:100%;
+    right:0;
+    width:100%;
+    height:100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background:hs1(0,0%,91%,0.5);
+    overflow: hidden;
+}
+.new-arrival.box:hover.content{
+    top:0;
+    transition: 0.2rem;
+}
+.product-container{
+    display: grid;
+    grid-template-columns:auto auto auto auto;
+    gap:1rem;
+    margin-top: 2rem;
+    border-radius: 90px;
+}
+.product-container.box{
+    position: relative;
+    padding: 10px;
+    box-shadow: var(--box-shadow);
+}
+.product-container.box.content h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+.product-container.box.content.starts.bx{
+    color:var(--main-color);
+}
+.product-container.box.box-cart-alt{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 10px;
+    font-size: 24px;
+    background:var(--main-color);
+    color:var(--bg-color);
+}
+.product-container.box.box-cart-alt:hover{
+    background:var(--text-color);
+}
+.product-container.box:hover.img{
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    transition: 0.55;
+}
+.reviews-container{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(240px,auto));
+    gap: 1rem;
+    margin-top:2rem;
+}
+.reviews-container.box{
+    padding: 10px;
+    border: 2px solid var(--text-color);
+    border-radius: 0.5rem;
+    text-align: center;
+    box-shadow: var(--box-shadow);
+}
+.reviews-container.box img{
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.reviews-container.box.stars.bx{
+    color:var(--main-color);
+}
+.reviews-container.box p{
+    font-size: 0.938rem;
+    font-style: italic;
+    margin:0.5rem 0.5rem;
+}
+.reviews-container.box h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+.reviews-container.box:hover{
+    background:var(--text-color);
+    color:var(--main-color);
+}
+footer{
+    display: grid;
+    grid-template: repeat(auto-fit,min-max(240px,auto));
+    gap: 1rem;
+    color:var(--text-color);
+}
+.footer-box h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.footer-box p{
+    font-size: 0.938rem;
+    margin-bottom: 10px;
+}
+.social{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+.social a.bx{
+    font-size: 10px;
+    color: var(--text-color);
+    padding:10px;
+    background: var(--second-color);
+    border-radius: 0.5rem;
+}
+.social a.bx:hover{
+    background:var(--main-color);
+    color:var(--bg-color)
+}
+.footer-box h3{
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.footer-box li a {
+    color:var(--text-color);
+}
+.footer-box li a:hover{
+    color: var(--main-color);
+}
+.payment{
+    display: flex;
+    align-items:center;
+    column-gap: 00.5rem;
+}
+.payment img{
+    width: 50px;
+    height: 50px;
+}
+.copyright{
+    padding:20px;
+    text-align: center;
+    color:var(--text-color)
+}
+/*making Responsive*/
+@media (max-width:1058px){
+    header{
+        padding: 18px 60px;
+    }
+    section{
+        padding: 50px 60px;
+    }
+    .home-text h1{
+        font-size:3rem;
+    }
+}
+@media(max-width:768px){
+    header{
+        padding:12px 4%;
+    }
+#menu-icon{
+    display: initial;
+}
+.header.navbar{
+    position: absolute;
+    width: 240px;
+    height: 100vh;
+    top: 100%;
+    right:100%;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    background: var(--bg-color);
+    row-gap: 1.4rem;
+    padding: 20px;
+    box-shadow: 4px 4px 0 4px rgb(14 55 54 /15%);
+    transition: 0.2s linear;
+    text-align: left;
+}
+.header.logo h1{
+    width: 200px;
+    height: 200px;
+}
+.navbar.active{
+    right: 0;
+}
+.home-text h1{
+    font-size: 2rem;
+}
+}
+@media (maax-width:360px){
+    .home-text span{
+        font-size: 0.8rem;
+    }
+    .cart img{
+        width: 77px;
+    }
+    .heading.h1{
+        font-size: 1.4rem;
+    }
+}
+.swiper-wrapper{
+    display: flex;
+    max-width: 1280px;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.swiper-slide img {
+   width: 200px;
+   height: 300px;
+   border-radius: 50px;
+}
 
-    <!--products-->
-    <section class="product" id="product">
-        <div class="heading">
-            <h1>Our<span>products</span></h1>
-        </div>
-        <div class="product-contanier">
-            <div class="box">
-                <img src="images/shirt4.jpg" alt="">
-                <div class="content">
-                    <h2>T-Shirt 14A</h2>
-    </section>
-    <!--Reviews-->
-    <section class="reviews" id="reviews">
-        <div class="heading">
-            <h1>Our<span>Customer</span></h1>
-            <div class="box">
-                <img src="./images/blonde-with-curly-hair-driving-shopping-cart.jpg" alt="">
-            </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium reprehenderit asperiores magni,
-                numquam commodi sunt provident itaque ad ratione vero voluptatum illo corporis recusandae amet eligendi
-                illum dolor voluptate dolore!</p>
-            <h2>Will Smith</h2>
-        </div>
-        <div class="box">
-            <img src="./images/blonde-with-curly-hair-driving-shopping-cart.jpg" alt="">
-        </div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium reprehenderit asperiores magni, numquam
-            commodi sunt provident itaque ad ratione vero voluptatum illo corporis recusandae amet eligendi illum dolor
-            voluptate dolore!</p>
-        <h2>Will Smith</h2>
-        </div>
-
-        <div class="box">
-            <img src="./images/blonde-with-curly-hair-driving-shopping-cart.jpg" alt="">
-        </div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium reprehenderit asperiores magni, numquam
-            commodi sunt provident itaque ad ratione vero voluptatum illo corporis recusandae amet eligendi illum dolor
-            voluptate dolore!</p>
-        <h2>Will Smith</h2>
-        </div>
-    </section>
-    <!--footer-->
-    <section class="footer">
-        <div class="footer-box">
-            <h2>Addidas</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur officiis, repellat sit delectus magni,
-                id neque animi repudiandae pariatur iure voluptas veniam molestiae nostrum reiciendis eius ducimus
-                soluta, placeat possimus.</p>
-
-            <div class="social">
-                <img src="./images/facebook.png" alt="facebook">
-                <img src="./images/instagram.png" alt="instagram">
-                <img src="./images/twitter.svg" alt="twitter">
-                <img src="./images/tiktok.svg" alt="tiktok">
-
-            </div>
-        </div>
-        <div class="footer-box">
-            <h3>Surpport</h3>
-            <li>Product</li>
-        </div>
-        <div class="footer-box">
-            <li>Help&Support</li>
-        </div>
-        <div class="footer-box">
-            <li>Return policy</li>
-        </div>
-        <div class="footer-box">
-            <li>Terms of use</li>
-        </div>
-        <div class="footer-box">
-            <li>FAQ</li>
-        </div>
-        <div class="footer-box">
-            <h3>Our Branches</h3>
-            <li><a href=""></a>Japan</li>
-            <li><a href=""></a>United state</li>
-            <li><a href=""></a>Canada</li>
-        </div>
-        <div class="payment">
-            <h3>Method of payment</h3>
-            <img src="./images/visa.jpg" alt="">
-            <img src="./images/paypal.jpg" alt="">
-            <img src="./images/stripe.jpg" alt="">
-        </div>
-        </div>
-    </section>
-    <!--copyright-->
-    <div class="copyright">
-        <p>&#169; carpool venom All right Reserved</p>
-    </div>
-</body>
-
-</html>
+h1{
+    font-size: 30px;
+}
